--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,7 @@
-# node files
-dist
-node_modules
-
 # iOS files
-Pods
-Podfile.lock
 Build
 xcuserdata
+*.xcworkspacedata
 
 # macOS files
 .DS_Store
@@ -59,3 +54,7 @@ captures
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
+*.tgz
+
+# node
+node_modules
